AAE-17000 Upgrade Activiti Cloud to Spring Boot 3.2 and Spring Cloud 2023.0.0 (#1224)
* update activiti.version to 0.0.1-PR-4448-1485-SNAPSHOT

* update to SB 3.2.0-M3 and SC 2023.0.0-M2

* update H2 version to 2.2.224

* temporary shim JdbcMetadataStore to fix broken count query on start

* update Snakeyaml version to 2.2 as required by Spring 6.1

* apply Prettier formatting to JdbcMetadataStore

* Refactor AuthorizationConfigurer to use HttpSecurity lambda customizer

* refactor deprecated ResponseEntity getStatusCodeValue() to getStatusCode().value()

* remove deprecated Spring MVC setUseTrailingSlashMatch configurer

* refactor deprecated Java class newInstance() to getDeclaredConstructor().newInstance()

* update activiti.version to 0.0.1-PR-4448-1500-SNAPSHOT

* update activiti.version to 0.0.1-PR-4448-1501-SNAPSHOT

* update spring-boot.version to 3.2.0-RC1

* update activiti.version to 0.0.1-PR-4448-1550-SNAPSHOT

* update spring-boot.version to 2023.0.0-RC2

* update activiti.version to 0.0.1-PR-4448-1562-SNAPSHOT

* update activiti.version to 0.0.1-PR-4448-1565-SNAPSHOT

* update spring-boot.version to 3.2.0

* update activiti.version to 0.0.1-PR-4448-1618-SNAPSHOT

* AAE-16343 Enable CSRF security

* update liquibase.version to 4.24.0

* revert JdbcMetadataStore override fix

* Add Temporal Timestamp JPA date qualifier for Query entities

* Update graphql-jpa-query.version to 1.2.1

* update activiti.version to 0.0.1-PR-4448-1646-SNAPSHOT

* update spring-cloud.version to 2023.0.0

* update activiti.version to 0.0.1-PR-4448-1675-SNAPSHOT

* remove Spring Milestones repository from pom.xml

* revert everit-json-schema.version to 1.14.3

* add assertions for Date to Timestamp coercing to serialized values

* update hibernate.version to 6.3.1.Final

* Add missing Temporal import

* update activiti.version to 0.0.1-PR-4448-1690-SNAPSHOT

* Remove reference to Spring Milestones

* fix(version